feat: handle update post , add text editor , display data into single post page

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
 @layer base {
     body {
@@ -9,7 +9,7 @@
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         font-size: 16px;
         color: #232323;
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Montserrat', sans-serif;
     }
 }
 
@@ -32,4 +32,15 @@
 
 img {
     display: block;
+}
+
+.content p img {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+.content p {
+    margin-bottom: 20px;
 }
